--- a/menu.html
+++ b/menu.html
@@ -17,13 +17,13 @@
             <li class="lista"><a href="index.html">Início</a></li>
             <li class="lista"><a href="menu.html">Menu</a>
                 <ul>
-                        <li><a href="cafe.html">Café da Manhã</a></li>
-                        <li><a href="almoco.html">Almoço</a></li>
-                        <li><a href="janta.html">Jantar</a></li>
-                        <li><a href="sobremesas.html">Sobremesas</a></li>
+                        <li><a href="cardápio1.html">Café da Manhã</a></li>
+                        <li><a href="cardápio2.html">Almoço</a></li>
+                        <li><a href="cardápio3.html">Jantar</a></li>
+                        <li><a href="cardápio4.html">Sobremesas</a></li>
                 </ul>
             </li>
-            <li class="lista"><a href="reservas.html">Reservas</a></li>
+            <li class="lista"><a href="reservas.html" target="_blank">Reservas</a></li>
             <li class="lista"><a href="sobre.html">Sobre Nós</a></li>
         </ul>
     </nav>
@@ -38,9 +38,9 @@
         <h1>Café da Manhã</h1>
     </div>
     <section class="cafe">
-        <p>Desperte seus sentidos com o aroma irresistível do nosso café fresco. No Sabor e Arte, o café da manhã é mais do que uma refeição; é um momento para recarregar energias e começar o dia com o pé direito. Desfrute de uma seleção cuidadosa de pães artesanais, frutas frescas, sucos naturais e, é claro, nossa especialidade: o café, preparado com os melhores grãos para proporcionar uma experiência única a cada xícara. Seja um encontro rápido ou uma refeição tranquila, nosso café da manhã é a escolha perfeita para dar início ao seu dia de maneira deliciosa.
+        <p><i>Desperte seus sentidos com o aroma irresistível do nosso café fresco. No Sabor e Arte, o café da manhã é mais do que uma refeição; é um momento para recarregar energias e começar o dia com o pé direito. Desfrute de uma seleção cuidadosa de pães artesanais, frutas frescas, sucos naturais e, é claro, nossa especialidade: o café, preparado com os melhores grãos para proporcionar uma experiência única a cada xícara. Seja um encontro rápido ou uma refeição tranquila, nosso café da manhã é a escolha perfeita para dar início ao seu dia de maneira deliciosa.</i>
         </p>
-        <div class="cardapio">Acessar cardápio</div>
+            <a href="cardápio1.html" class="cardapio">Acessar cardápio</a>
     </section>
   
     <div class="almoco-titulo"  id="almoco">
@@ -50,9 +50,9 @@
     </div>
     <section class="almoco">
         <p>
-            Transforme seu intervalo do meio-dia em uma experiência gastronômica no Sabor e Arte. Nosso almoço oferece uma variedade de pratos que combinam sabores tradicionais e contemporâneos, preparados com ingredientes frescos e de alta qualidade. Desde saladas vibrantes e sopas reconfortantes até pratos principais que destacam o melhor da culinária local e internacional, cada opção é pensada para satisfazer e surpreender seu paladar. Seja para uma refeição rápida durante o trabalho ou um almoço relaxante com amigos, nosso menu é a escolha ideal para um momento delicioso e revitalizante.
+            <i>Transforme seu intervalo do meio-dia em uma experiência gastronômica no Sabor e Arte. Nosso almoço oferece uma variedade de pratos que combinam sabores tradicionais e contemporâneos, preparados com ingredientes frescos e de alta qualidade. Desde saladas vibrantes e sopas reconfortantes até pratos principais que destacam o melhor da culinária local e internacional, cada opção é pensada para satisfazer e surpreender seu paladar. Seja para uma refeição rápida durante o trabalho ou um almoço relaxante com amigos, nosso menu é a escolha ideal para um momento delicioso e revitalizante.</i>
         </p>
-        <div class="cardapio">Acessar cardápio</div>
+        <a href="cardápio2.html" class="cardapio">Acessar cardápio</a>
     </section>
     <div class="janta-titulo"  id="janta">
 
@@ -60,15 +60,24 @@
 
     </div>
     <section class="janta">
-        <p>Encante seus sentidos com um jantar inesquecível no Sabor e Arte. Nosso menu de jantar é cuidadosamente elaborado para proporcionar uma experiência sofisticada e deliciosa, ideal para encerrar o dia com estilo. Explore uma seleção de pratos que destacam sabores ricos e inovadores, desde entradas elegantes até sobremesas indulgentes. Nossas especialidades incluem carnes suculentas, frutos do mar frescos e opções vegetarianas criativas, todos preparados com os melhores ingredientes. Perfeito para um jantar romântico, uma celebração especial ou simplesmente para desfrutar de uma refeição refinada, nosso jantar é a escolha certa para qualquer ocasião.</p>
-        <div class="cardapio">Acessar cardápio</div>
+        <p><i>Encante seus sentidos com um jantar inesquecível no Sabor e Arte. Nosso menu de jantar é cuidadosamente elaborado para proporcionar uma experiência sofisticada e deliciosa, ideal para encerrar o dia com estilo. Explore uma seleção de pratos que destacam sabores ricos e inovadores, desde entradas elegantes até sobremesas indulgentes. Nossas especialidades incluem carnes suculentas, frutos do mar frescos e opções vegetarianas criativas, todos preparados com os melhores ingredientes. Perfeito para um jantar romântico, uma celebração especial ou simplesmente para desfrutar de uma refeição refinada, nosso jantar é a escolha certa para qualquer ocasião.</i></p>
+        <a href="cardápio3.html" class="cardapio">Acessar cardápio</a>
     </section>
 
     <div class="sobremesa-titulo" id="sobremesa"><h1>Sobremesa</h1></div> 
 
     <section class="sobremesa" >
-        <p>Finalize sua refeição com um toque de doce perfeição no Sabor e Arte. Nossas sobremesas são verdadeiras obras de arte, criadas para encantar seu paladar e oferecer uma experiência memorável. Delicie-se com uma seleção diversificada que inclui tortas, mousses, sorvetes artesanais e muito mais, cada um preparado com ingredientes de alta qualidade e uma pitada de criatividade. Seja para compartilhar ou para se mimar, nossas sobremesas são o final perfeito para qualquer refeição, deixando uma lembrança doce e duradoura.</p>
-        <div class="cardapio">Acessar cardápio</div>
+        <p><i>Finalize sua refeição com um toque de doce perfeição no Sabor e Arte. Nossas sobremesas são verdadeiras obras de arte, criadas para encantar seu paladar e oferecer uma experiência memorável. Delicie-se com uma seleção diversificada que inclui tortas, mousses, sorvetes artesanais e muito mais, cada um preparado com ingredientes de alta qualidade e uma pitada de criatividade. Seja para compartilhar ou para se mimar, nossas sobremesas são o final perfeito para qualquer refeição, deixando uma lembrança doce e duradoura.</i></p>
+        <a href="cardápio4.html" class="cardapio">Acessar cardápio</a>
     </section>
+    <footer>
+        <p>&copy; 2024 Sabor & Arte. Todos os direitos reservados. | Desenvolvido por <a href="https://github.com/FilippoChiarion" target="_blank">Filippo Chiarion</a></p>
+        <p>Siga-nos nas redes sociais:</p>
+        <ul>
+            <li><a href="https://www.facebook.com/seusaborarte">Facebook</a></li>
+            <li><a href="https://www.instagram.com/seusaborarte">Instagram</a></li>
+            <li><a href="https://www.twitter.com/seusaborarte">Twitter</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
